# sophy

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  sophy.c  sophy.pyx  tests.py  tox.ini
.github/workflows/: wheels.yaml
.pytest_cache/v/cache/: nodeids
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst
scripts/: make-wheels.sh  upload.sh
sonya/: __init__.py  sophia.pyi  sophia.pyx
sonya/src/: sophia.c
src/: sophia.c
tests/: conftest.py  test_configuration.py  test_index.py  test_multi_kv1.py  test_multi_kv2.py  test_multiple_databases.py  test_operations.py  test_string_vs_bytes.py
